# moodsprite

./: .gitignore  .gitmodules  Dockerfile  README.md  build_proto.sh  docker-compose.yml  moodsprite.proto
moodsprite/: README.md  generate_character.py  generate_character_fixed.py  pyproject.toml  requirements.txt  run_server.py  run_test_client.py  setup_instantcharacter.py
moodsprite/server/: __init__.py  moodsprite_pb2.py  moodsprite_pb2_grpc.py  server.py  test_client.py
project_homepage/: .gitignore  README.md  middleware.ts  package-lock.json  package.json  test-setup.js
project_homepage/prisma/: schema.prisma
project_homepage/src/app/: layout.tsx  page.tsx
project_homepage/src/app/(dashboard)/: layout.tsx
project_homepage/src/app/(dashboard)/settings/: page.tsx
project_homepage/src/app/(dashboard)/sprite/: page.tsx
project_homepage/src/app/api/character/: route.ts
project_homepage/src/app/api/history/: route.ts
project_homepage/src/app/api/stream/: route.ts
project_homepage/src/app/sign-in/[[...sign-in]]/: page.tsx
project_homepage/src/app/sign-up/[[...sign-up]]/: page.tsx
project_homepage/src/components/: loading-modal.tsx  menu-bar.tsx
rasa_project/: actions.py  config.yml  credentials.yml  domain.yml  endpoints.yml  rules.yml
rasa_project/data/: stories.yml
sera/: README.md  moodsprite.yml  requirements.txt
sera/keyframes/: generated_keyframes.json
ten_demo/: README.md  deploy.sh
ten_demo/extensions/coqui_tts_python/: __init__.py  addon.py  config.py  extension.py  manifest.json  property.json  requirements.txt
ten_demo/extensions/whisper_asr_python/: __init__.py  addon.py  config.py  extension.py  manifest.json  property.json
